--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -2,7 +2,7 @@
 version: '3.1'
 
 services:
-  db:
+  db-postgres:
     image: postgres:latest
     container_name: tfm-postgres
     ports:
@@ -14,4 +14,12 @@ services:
       POSTGRES_PASSWORD: root
       POSTGRES_DB: test
 
-    # (this is just an example, not intended to be a production configuration)
+  mongo:
+    image: mongo
+    container_name: tfm-mongo
+    ports:
+      - '27017:27017'
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
