--- a/backend/package.json
+++ b/backend/package.json
@@ -23,15 +23,19 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/mongoose": "^11.0.1",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^11.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "mongoose": "^8.12.1",
     "mysql2": "^3.12.0",
     "pg": "^8.13.3",
     "postgres": "^3.4.5",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "shallow-equal-object": "^1.1.1",
     "typeorm": "^0.3.20",
     "uuid": "^11.1.0"
   },
