Changes in backend/frontend

--- a/backend/apps/cti-management/.env
+++ b/backend/apps/cti-management/.env
@@ -5,7 +5,7 @@ USERS_HOST=127.0.0.1
 
 MONGO_USER=root
 MONGO_PASS=example
-MONGO_HOST=127.0.0.1
+MONGO_HOST=ctishield-mongo
 MONGO_PORT=27017
 MONGO_DB=cti-management
 
