--- a/backend/apps/users-management/.env
+++ b/backend/apps/users-management/.env
@@ -1,9 +1,9 @@
 REST_PORT=3001
 TCP_PORT=3003
-HOST=127.0.0.1
+HOST=0.0.0.0
 
 POSTGRES_PORT=5432
-POSTGRES_HOST=127.0.0.1
+POSTGRES_HOST=ctishield-postgres
 POSTGRES_DATABASE=test
 POSTGRES_USERNAME=root
 POSTGRES_PASSWORD=root
